# rift

./: .gitignore  .ignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  VISION.md  deny.toml  justfile  rust-toolchain.toml
.claude/: .gitignore  settings.json
.claude/agents/: rust-implementer.md
.claude/docs/: control-mode-roadmap-p2c.md  control-mode-roadmap.md  patterns.md  protocol.md  terminal-roadmap.md
.claude/prompts/: fix-c1-agents-md.md  fix-c3-color-conversion.md  fix-m1-animation-frame.md  fix-m2-scroll-preservation.md  fix-m5-disconnect-freeze.md  phase-1.5.md  phase-1.md
.claude/skills/implement/: SKILL.md
.claude/skills/plan/: SKILL.md
.github/ISSUE_TEMPLATE/: config.yml  implementation-step.yml
.github/workflows/: ci.yml  issue-spec-check.yml  planning-gate.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
crates/app/: Cargo.toml  build.rs
crates/app/assets/file_icons/: ATTRIBUTIONS.md
crates/app/assets/themes/: catppuccin-mocha.json
crates/app/resources/windows/: rift.rc
crates/app/src/: activity_rail.rs  command_palette.rs  command_registry.rs  connection_screen.rs  diff_view.rs  editor.rs  file_icons.rs  file_tree.rs  fuzzy_match.rs  lib.rs  main.rs  outline_panel.rs  problems_panel.rs  quick_open.rs  recents.rs  results_panel.rs  root_picker.rs  session_order.rs  session_picker.rs  settings.rs  source_control.rs  status_bar.rs  terminal_panel.rs  title_bar.rs  window_state.rs  workspace.rs  worktree.rs
crates/app/src/gallery/: demos.rs  main.rs  mod.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: browse.rs  buffer.rs  clone.rs  diff.rs  file_ops.rs  git_write.rs  lib.rs  lsp.rs  main.rs  spike.rs  terminal.rs
crates/daemon/tests/: logging_sinks.rs  lsp_diagnostics.rs  transport_roundtrip.rs
crates/explorer/: Cargo.toml
crates/explorer/src/: diff.rs  error.rs  git.rs  git_write.rs  lib.rs  snapshot.rs  watcher.rs
crates/logging/: Cargo.toml
crates/logging/src/: filter.rs  lib.rs  panic.rs  sink.rs  tty.rs
crates/logging/tests/: panic_hook.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: document.rs  error.rs  lib.rs  nav.rs  registry.rs  selector.rs  server.rs  spike.rs
crates/lsp/tests/: nav_roundtrip.rs  registry_lifecycle.rs  rust_analyzer_spike.rs
crates/lsp/tests/fixtures/rust_project/: .gitignore  Cargo.toml
crates/lsp/tests/fixtures/rust_project/src/: lib.rs
crates/plugin-api/: Cargo.toml
crates/plugin-api/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: frame.rs  lib.rs
crates/ssh/: Cargo.toml
crates/ssh/examples/: vte_location_spike.rs
crates/ssh/src/: backoff.rs  connection.rs  daemon_channel.rs  deploy.rs  error.rs  known_hosts.rs  launch.rs  lib.rs  pty.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: colors.rs  error.rs  grid.rs  keyboard.rs  keytable.rs  layout.rs  lib.rs  mouse.rs  pane_view.rs  prefix.rs  search.rs  session_view.rs  statusline.rs  tmux_quote.rs  view.rs
crates/tmux-core/: Cargo.toml
crates/tmux-core/src/: client.rs  error.rs  event.rs  lib.rs  parser.rs  vis.rs
crates/tmux-core/tests/: control_session.rs
crates/tmux-core/tests/fixtures/: control_session.ctrl  output_split_multibyte.ctrl
docs/: architecture.md  constitution.md  design.md  handover-conventions.md  implementation-workflow.md  patterns.md  planning-workflow.md  prior-art.md  project-context.md  protocol.md  roadmap.md  spec-clone-repo.md  spec-cockpit-chrome.md  spec-command-palette.md  spec-component-gallery.md  spec-connection-robustness.md  spec-daemon-filetree.md  spec-daemon-git-status.md  spec-daemon-lsp.md  spec-daemon-project-root.md  spec-daemon-redeploy.md  spec-daemon-scaffolding.md  spec-dogfooding-channels.md  spec-dogfooding-fixes.md  spec-editor-chrome.md  spec-editor-tabs.md  spec-editor.md  spec-explorer-context-menu.md  spec-explorer-file-ops.md  spec-explorer-icons.md  spec-explorer-panel.md  spec-explorer-parity.md  spec-explorer-polish.md  spec-explorer-redesign.md  spec-explorer-search.md  spec-gpui-component-adoption.md  spec-gpui-headless-renderer.md  spec-gpui-rev-bump.md  spec-host-scoped-root-recents.md  spec-host-telemetry.md  (+45 more)
docs/archive/: spec-clone-repo.md  spec-component-gallery.md  spec-daemon-filetree.md  spec-daemon-git-status.md  spec-daemon-lsp.md  spec-daemon-project-root.md  spec-daemon-scaffolding.md  spec-gpui-component-adoption.md  spec-gpui-rev-bump.md  spec-host-telemetry.md  spec-lsp-navigation.md  spec-pane-activity-indicators.md  spec-pane-window-management.md  spec-per-session-project-root.md  spec-phase2ab-control-mode.md  spec-phase2c-multipane.md  spec-phase2d-tabbar.md  spec-planning-automation.md  spec-remote-exec-wrapper.md  spec-session-root-picker.md  spec-session-start-directory.md  spec-status-bar.md  spec-terminal-interaction-fixes.md  spec-terminal-migration.md  spec-terminal-streaming.md  spec-tmux-statusline-mirroring.md  spec-visibility-rail-focus.md  spec-workflow-automation.md  spec-workspace-visibility-rail.md
scripts/: check-color-tokens.sh  set-issue-status.sh
