[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/daemon",
    "crates/tmux-core",
    "crates/terminal",
    "crates/explorer",
    "crates/protocol",
    "crates/plugin-api",
    "crates/ssh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/skrischer/rift"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
termy_terminal_ui = { git = "https://github.com/skrischer/termy", rev = "49d3928570c8b50fabb4f7d3d5f6322d3296fafa" }
flume = "0.11"
alacritty_terminal = "0.26.0"
smol = "2.0"
