[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/daemon",
    "crates/tmux-core",
    "crates/terminal",
    "crates/explorer",
    "crates/protocol",
    "crates/plugin-api",
    "crates/ssh",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/skrischer/rift"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
termy_terminal_ui = { git = "https://github.com/skrischer/termy", rev = "49d3928570c8b50fabb4f7d3d5f6322d3296fafa" }
flume = "0.11"
alacritty_terminal = "0.26.0"
smol = "2.0"

# Stable daily-driver profile: release-grade optimization, but debug-assertions ON so
# the GPUI Windows DirectX renderer takes its runtime-shader path (cfg(debug_assertions))
# instead of the release path that include!s build-time fxc-compiled shaders. That build
# script only runs on a Windows host and needs fxc.exe, so it cannot cross-compile from
# WSL; the runtime path compiles shaders on the Windows host at startup, like the debug
# dev loop. See docs/spec-dogfooding-channels.md.
[profile.stable]
inherits = "release"
debug-assertions = true

# Ensure gpui_windows's build script is compiled with debug-assertions too, so its
# cfg(not(debug_assertions)) shader-compilation gate stays off (otherwise it panics
# looking for fxc.exe on the Linux host).
[profile.stable.build-override]
debug-assertions = true
