[package]
name = "rift-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rift-protocol = { path = "../../crates/protocol" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }
