[package]
name = "rift-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rift"
path = "src/main.rs"

# Opt-in component gallery dev tool. Gated by `required-features` so the default
# `cargo build --workspace` and the shipping `rift` binary never compile it.
[[bin]]
name = "gallery"
path = "src/gallery/main.rs"
required-features = ["gallery"]

[features]
# Enables the gallery binary and its demo-only dependencies. Adds no compilation
# to the product build (gpui-component-assets is already in the graph via
# gpui-component; here it is named directly only for `with_assets(Assets)`).
# `dep:rust-embed` flips its `debug-embed` feature on via cargo feature
# unification so gpui-component-assets embeds its icon SVGs in debug builds too —
# without it rust-embed reads icons from the compile-time path at runtime, which
# the cross-compiled Windows gallery exe cannot find (icons render blank).
# `gpui-component/tree-sitter-rust` enables a single syntax grammar for the
# code-editor demo (not the umbrella `tree-sitter-languages` set); charts run on
# plain f64, so the `decimal` feature is intentionally not enabled.
# `gpui-wry`/`wry`/`raw-window-handle` are the WebView demo's stack; they are
# declared only under the Windows target table below, so enabling them here is a
# no-op on other targets (which render a "Windows only" notice instead).
gallery = [
    "dep:gpui-component-assets",
    "dep:rust-embed",
    "gpui-component/tree-sitter-rust",
    "dep:gpui-wry",
    "dep:wry",
    "dep:raw-window-handle",
]
# Console-free stable launcher: switches the rift binary to the Windows GUI
# subsystem (see the cfg_attr in src/main.rs). Off by default so dev launches
# keep their RUST_LOG console; enabled only by `just promote`.
windowed = []

[dependencies]
rift-terminal = { path = "../terminal" }
rift-ssh = { path = "../ssh" }
rift-protocol = { path = "../protocol" }
gpui.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
gpui-component-assets = { workspace = true, optional = true }
# Not used in code; declared only to enable rust-embed's `debug-embed` feature
# for the gallery (see the `gallery` feature comment). Already in the graph via
# gpui-component-assets, so this adds no new crate to Cargo.lock.
rust-embed = { version = "8", optional = true, features = ["debug-embed"] }
tokio.workspace = true
flume.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
termy_terminal_ui.workspace = true

# The real WebView demo (gallery, Windows only). `gpui-wry` is the `crates/webview`
# member of the same gpui-component repo rift already pins, so its `gpui.workspace`
# resolves to rift's single pinned `gpui` — Cargo.lock keeps exactly one `gpui`.
# Windows-gated because the upstream Linux (GTK) path is non-functional and would
# pull `libwebkit2gtk` into the headless/CI builds; non-Windows targets render a
# "Windows only" notice. All three are optional and pulled only by the `gallery`
# feature, so the product `rift` build never compiles the Wry stack.
# `gpui-wry`'s `rev` is pinned to the exact rev the workspace `gpui-component` is
# locked at: both are crates of the same git repo, so a single shared rev keeps
# Cargo.lock at one checkout (and thus one `gpui`). Leaving it floating would drag
# the whole source — `gpui-component` included — to the latest rev. Bump this in
# lockstep whenever the workspace `gpui-component` rev moves.
[target.'cfg(target_os = "windows")'.dependencies]
gpui-wry = { git = "https://github.com/longbridge/gpui-component", rev = "9ad30e631e15f9bbba049717767bf4cd98e4f179", optional = true }
wry = { version = "0.53.3", package = "lb-wry", optional = true }
raw-window-handle = { version = "0.6", features = ["std"], optional = true }

[build-dependencies]
embed-resource = "3"
