[package]
name = "rift-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rift"
path = "src/main.rs"

# Opt-in component gallery dev tool. Gated by `required-features` so the default
# `cargo build --workspace` and the shipping `rift` binary never compile it.
[[bin]]
name = "gallery"
path = "src/gallery/main.rs"
required-features = ["gallery"]

[features]
# Enables the gallery binary and its demo-only dependencies. Adds no compilation
# to the product build (gpui-component-assets is already in the graph via
# gpui-component; here it is named directly only for `with_assets(Assets)`).
# `dep:rust-embed` flips its `debug-embed` feature on via cargo feature
# unification so gpui-component-assets embeds its icon SVGs in debug builds too —
# without it rust-embed reads icons from the compile-time path at runtime, which
# the cross-compiled Windows gallery exe cannot find (icons render blank).
# `gpui-component/tree-sitter-rust` enables a single syntax grammar for the
# code-editor demo (not the umbrella `tree-sitter-languages` set); charts run on
# plain f64, so the `decimal` feature is intentionally not enabled.
gallery = [
    "dep:gpui-component-assets",
    "dep:rust-embed",
    "gpui-component/tree-sitter-rust",
]
# Console-free stable launcher: switches the rift binary to the Windows GUI
# subsystem (see the cfg_attr in src/main.rs). Off by default so dev launches
# keep their RUST_LOG console; enabled only by `just promote`.
windowed = []

[dependencies]
rift-terminal = { path = "../terminal" }
rift-ssh = { path = "../ssh" }
rift-protocol = { path = "../protocol" }
rift-logging = { path = "../logging" }
gpui.workspace = true
gpui_platform.workspace = true
# `tree-sitter-languages` enables the umbrella set of Tree-sitter grammars so the
# code editor highlights a file by its extension (the gallery's single
# `tree-sitter-rust` is a demo-only subset). Enabled here on the product `rift`
# binary's dependency, not behind the `gallery` feature, so the shipping editor
# highlights every supported language. `code_editor(<ext>)` resolves the grammar
# and falls back to plain text for an unknown extension.
gpui-component = { workspace = true, features = ["tree-sitter-languages"] }
gpui-component-assets = { workspace = true, optional = true }
# Not used in code; declared only to enable rust-embed's `debug-embed` feature
# for the gallery (see the `gallery` feature comment). Already in the graph via
# gpui-component-assets, so this adds no new crate to Cargo.lock.
rust-embed = { version = "8", optional = true, features = ["debug-embed"] }
tokio.workspace = true
flume.workspace = true
# GPUI-side timeout for the buffer-channel open request (`smol::Timer`; the
# tokio timer does not fire on the GPUI executor — docs/patterns.md).
smol.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
termy_terminal_ui.workspace = true

[build-dependencies]
embed-resource = "3"

# `test-support` unlocks `#[gpui::test]` / `TestAppContext` for a headless
# window in the dock panel-tree test (`workspace.rs`) — mirrors how
# gpui-component's own `crates/ui` tests itself. Dev-only: never reaches the
# `rift` / `gallery` binaries, which build without `--tests`.
[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
