[package]
name = "rift-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rift-protocol = { path = "../protocol" }
rift-plugin-api = { path = "../plugin-api" }
rift-tmux-core = { path = "../tmux-core" }
rift-terminal = { path = "../terminal" }
rift-explorer = { path = "../explorer" }
tokio.workspace = true
anyhow.workspace = true
