[package]
name = "rift-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rift-protocol = { path = "../protocol" }
rift-explorer = { path = "../explorer" }
rift-lsp = { path = "../lsp" }
rift-tmux-core = { path = "../tmux-core" }
tokio.workspace = true
anyhow.workspace = true
