[package]
name = "rift-ssh"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rift-protocol = { path = "../protocol" }
russh = "0.46"
russh-keys = "0.46"
home = "0.5"
tokio.workspace = true
flume.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
